# squares

./: Game.elm  Model.elm
client/: Chat.elm  Echo.elm  Encode.elm  Model.elm  Multi.elm  Multi.html  MultiPlayer.elm  Single.elm  Squares.html  States.elm  Util.elm  View.elm  Websocket.js  default.nix  elm-package.json  game.html  squares-client.cabal  style.css
client/Game/: Game.elm  Interface.elm  Model.elm  View.elm
client/src/: Dom.hs  Event.hs  Game.hs  Main.hs  Multi.hs  Single.hs  Types.hs  View.hs  WebSocket.hs  Websocket.hs
client/src/Game/: Types.hs  View.hs
haskell_client/: Dom.hs  Game.hs  Squares.hs
lib/: default.nix  squares.cabal
lib/src/Squares/: Game.hs  Types.hs
lib/src/Squares/Game/: Types.hs
server/: ClientMessage.hs  Main.hs  ServerMessage.hs  default.nix  squares-server.cabal  squareserver.cabal
server/src/: ClientMessage.hs  Main.hs
squares/: squares.cabal
squares-client/: squares-client.cabal
squares-client/src/: Dom.hs  Main.hs
squares-server/: default.nix  squares-server.cabal
