Name: squares-client
Version: 0.1
Synopsis: Client for the Squares game
Description: Client for the Squares game 
License: BSD3
License-file: LICENSE
Author: Oliver Batchelor
Maintainer: saulzar@gmail.com
Stability: Experimental
Category: Game
Build-type: Simple
Cabal-version: >=1.2

executable squares-single
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    squares,
    reflex,
    ghcjs-dom,
    reflex-dom,
    ghcjs-websockets,
    ghcjs-websockets-reflex,
    containers,
    text,
    transformers,
    lens,
    linear,
    dependent-sum,
    file-embed,
    ghcjs-base,
    hashable,
    binary,
    time
  
  default-extensions: OverloadedStrings, DeriveGeneric, RecursiveDo, ScopedTypeVariables, FlexibleContexts, TupleSections, TemplateHaskell, RankNTypes


  other-extensions: TemplateHaskell
  ghc-prof-options: -fprof-auto
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
