name:                squares
version:             0.1
synopsis:            Common logic shared between client and server for the Squares game
description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Batchelor
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:   Squares.Game, Squares.Types, Squares.Game.Types
  hs-source-dirs: src
  build-depends:
    base,
    containers,
    text,
    transformers,
    file-embed,
    lens,
    linear,
    binary,
    text-binary

    
  default-extensions: GeneralizedNewtypeDeriving, DeriveGeneric, RecursiveDo, ScopedTypeVariables, FlexibleContexts, TupleSections, OverloadedLists, TemplateHaskell, RankNTypes

  

