name:                squares
version:             0.2.0.0
synopsis:            Common logic shared between client and server for the Squares game
description:
license:             BSD3
license-file:        LICENSE
author:              Oliver Batchelor
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  exposed-modules:   Squares.Game
  ghc-options:       -Wall
  build-depends:     base >=4.7
  default-language:    Haskell2010

